--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -28,10 +28,25 @@
 
 <!-- Main Panel -->
 <main class="wizard-main flex-fill d-flex flex-column p-3">
-  <!-- <div class="border rounded p-4 mb-5">
-    <h3 class="mb-2" x-text="'[Elemento seleccionado]'"></h3>
-    <h4 x-text="step2.treeSelectedData.text"></h4>
-  </div> -->
+  <div class="border rounded p-4 mb-5">
+    <!-- <h3 class="mb-2" x-text="'[Elemento seleccionado]'"></h3> -->
+    <template x-if="step2.treeSelectedData && step2.treeSelectedData.isRelationship">
+      <h3
+        x-text="`${utils.translate('LBL_RELATIONSHIP')}: ${step2.treeSelectedData.text} (${step2.treeSelectedData.relationship.module_orig} » ${step2.treeSelectedData.relationship.module_dest})`"
+      ></h3>
+      <!-- <h4 x-text="`${step2.treeSelectedData.modules.join(' - ')}`"></h4> -->
+    </template>
+    <template x-if="step2.treeSelectedData && !step2.treeSelectedData.isRelationship">
+      <h3 x-text="`${utils.translate('LBL_MODULE')}: ${step2.treeSelectedData.text}`"></h3>
+    </template>
+    <button
+      type="button"
+      class="btn"
+      @click="TreeNavigator.addDataBlockFromTreeNode(step2.treeSelectedData);"
+    >
+      [Añadir Bloque de Datos]
+    </button>
+  </div>
   <div>
     <h3 class="mb-2" x-text="utils.translate('LBL_DATABLOCKS')"></h3>
     <div class="flex-fill border rounded p-2">
@@ -81,6 +96,7 @@
                     ></div>
                   </div>
                 </div>
+                <div x-effect="item.checkDataBlock()"></div>
               </div>
               <template x-if="item.module">
                 <!-- Duplicate Definition -->
@@ -101,6 +117,9 @@
                       :id="'duplicateFields'+item.name"
                       :data-model="'item.duplicate_detection.fields'"
                       data-label="LBL_DUPLICATE_FIELDS"
+                      :data-mapOld="`item.fields`"
+                      data-map-propertyOld="label"
+                      data-map-valueOld="name"
                       :data-map="`utils.getModuleInformation('${item.module}').fields`"
                       data-map-property="text"
                       data-multiple
@@ -145,26 +164,6 @@
           x-init="sticControls.fieldCheckbox($el);"
         ></div>
         <div class="card p-2" x-show="showDetails">
-          <!-- Relationships in Data Blocks -->
-          <div id="detailsRelDataBlocks">
-            <div
-              class="mt-3"
-              id="relDataBlocksTable"
-              data-model="step2.relationshipsInDataBlocks"
-              x-init="sticControls.elemTableArray($el);"
-            ></div>
-          </div>
-
-          <!-- Modules in Data Blocks -->
-          <div id="detailsModulesDataBlocks">
-            <div
-              class="mt-3"
-              id="modulesDataBlocksTable"
-              data-model="step2.modulesInDataBlocks"
-              x-init="sticControls.elemTableArray($el);"
-            ></div>
-          </div>
-
           <!-- Data Blocks -->
           <div id="detailsDataBlocks">
             <div
@@ -189,10 +188,8 @@
           <div
             id="details"
             :data-sections="JSON.stringify([
-                          {headerText:`'[Relaciones en Bloques de datos]'`, selected:true, contentId:'detailsRelDataBlocks'},
-                          {headerText:`'[Módulos en Bloques de datos]'`, selected:false, contentId:'detailsModulesDataBlocks'},
+                          {headerText:`'[Nodo seleccionado]'`, selected:true, contentId:'detailsSelectedNode'},
                           {headerText:`'[Bloques de datos]'`, selected:false, contentId:'detailsDataBlocks'},
-                          {headerText:`'[Nodo seleccionado]'`, selected:false, contentId:'detailsSelectedNode'},
                         ]);"
             x-init="sticControls.tabs($el)"
           ></div>
