--- a/modules/stic_Signatures/SignaturePortal/SignaturePortal.html
+++ b/modules/stic_Signatures/SignaturePortal/SignaturePortal.html
@@ -187,7 +187,7 @@
                         </div>
                     </form>
                     <div class="mt-3 text-center">
-                        <button id="resend-otp-btn" class="text-sm font-weight-medium text-primary">
+                        <button id="resend-otp-btn" class="btn btn-link">
                             ¿No ha recibido el código? Reenviar
                         </button>
                     </div>
