--- a/prv.html
+++ b/prv.html
@@ -190,3 +190,13 @@
   </div>
   
 </div>
+
+<div class="d-flex flex-column">
+  <label for="nom" >Nom</label>
+  <input type="text" id="nom" required>
+</div>
+
+<div class="d-flex flex-column">
+  <input type="text" id="nom2" required>
+  <label for="nom2" class="order-first">Nom</label>
+</div>
