--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -1,62 +1,48 @@
-<!-- Sidebar -->
-<!--       data-attribute="x-on:change='TreeNavigator.toggleAllModules(step2.treeShowAllModules)'" -->
-<nav class="wizard-sidebar bg-light border-end p-2 flex-shrink-0">
-  <h3 x-text="utils.translate('LBL_RELATIONSHIPS')"></h3>
-  <div
-    id="jstree-loading"
-    class="spinner-container justify-content-center align-items-center"
-    x-show="step2.loadingTree"
-  >
-    <div class="spinner-border text-secondary" role="status"></div>
-  </div>
-  <div
-    class="text-muted form-check form-switch"
-    id="switch_TreeAllModules"
-    data-model="step2.treeShowAllModules"
-    data-label="LBL_SHOW_ALL_MODULES"
-    data-attribute="x-on:change='TreeNavigator.toggleAllModules(step2.treeShowAllModules)'"
-    x-init="sticControls.fieldCheckbox($el);"
-    x-show="!step2.loadingTree"
-  ></div>
-  <div
-    class="wizard-tree"
-    id="jstree-container"
-    x-init="$nextTick(() => {TreeNavigator.initializeModuleTree($('#jstree-container'));});"
-    x-show="!step2.loadingTree"
-  ></div>
-</nav>
-
 <!-- Main Panel -->
 <main class="wizard-main flex-fill d-flex flex-column">
-  <div class="border-bottom p-4 mb-2 bg-light">
-    <!-- <h3 class="mb-2" x-text="'[Elemento seleccionado]'"></h3> -->
-    <template x-if="step2.treeSelectedData && step2.treeSelectedData.isRelationship">
-      <div>
-        <h3 x-text="`${step2.treeSelectedData.text} (${utils.translate('LBL_RELATIONSHIP')})`"></h3>
-        [Seleccione los Bloques de datos a relacionar]
-        <span
-          x-text="`${STIC.enabledModules[step2.treeSelectedData.relationship.module_orig].textSingular}:`"
-        ></span>
-        <span
-          x-text="`${STIC.enabledModules[step2.treeSelectedData.relationship.module_dest].textSingular}:`"
-        ></span>
-        <button type="button" class="btn float-end" @click="DataBlocksHelper.addDataBlockFromTreeNode(step2.treeSelectedData);">
-          [Relacionar Bloques de Datos]
-        </button>
-      </div>
-    </template>
-    <template x-if="step2.treeSelectedData && !step2.treeSelectedData.isRelationship">
-      <div>
-        <h3 x-text="`${step2.treeSelectedData.text} (${utils.translate('LBL_MODULE')})`"></h3>
-        <button type="button" class="btn float-end" @click="DataBlocksHelper.addDataBlockFromTreeNode(step2.treeSelectedData);">
-          [Añadir Bloque de Datos]
-        </button>
-      </div>
-    </template>
+  <!-- Add DataBlock from Module -->
+  <div
+    class="border-bottom ps-3 pt-3 mb-2 bg-light"
+    x-data="{creatingDataBlock:false, newDataBlock:{module:'', text:''}}"
+  >
+    <div class="row">
+      <button type="button" class="btn w-auto" x-show="!creatingDataBlock" @click="creatingDataBlock=true;">
+        [Añadir Bloque de Datos de Módulo]
+      </button>
+      <h4 x-show="creatingDataBlock">[Añadir Bloque de Datos de Módulo]</h4>
+    </div>
+    <div class="row align-items-end" x-show="creatingDataBlock">
+      <!-- Module -->
+      <stic-field-select
+        class="col-3"
+        x-model="newDataBlock.module"
+        label="LBL_BASE_MODULE"
+        map="STIC.enabledModules"
+        map-text="text"
+      ></stic-field-select>
+      <!-- Data Block name -->
+      <stic-field-text
+        class="col-3"
+        x-model="newDataBlock.text"
+        label="LBL_DATABLOCK"
+        x-effect="newDataBlock.text=formConfig.suggestDataBlockName(newDataBlock.module)"
+      ></stic-field-text>
+      <button
+        type="button"
+        class="btn w-32px mb-1px"
+        @click="formConfig.addDataBlockModule(newDataBlock.module, true, newDataBlock.text); creatingDataBlock = false;"
+      >
+        <span class="suitepicon suitepicon-action-confirm"></span>
+      </button>
+      <button type="button" class="btn w-32px mb-1px" @click="creatingDataBlock = false;">
+        <span class="suitepicon suitepicon-action-clear"></span>
+      </button>
+    </div>
   </div>
-  <div class="border rounded p-3">
+  <!-- Data Blocks -->
+  <div>
     <h3 class="mb-2" x-text="utils.translate('LBL_DATABLOCKS')+':'"></h3>
-    <div class="flex-fill border rounded p-2">
+    <div class="flex-fill border rounded p-2 overflow-auto">
       <!-- Main Content -->
       <template x-for="(item, key) in formConfig.data_blocks">
         <div class="card" :x-data="{item: item, key: key}">
@@ -64,7 +50,7 @@
             <div class="card-title">
               <div class="d-flex justify-content-between">
                 <h4
-                  :id="'dataBlockTitleEdit-'+item.name"
+                  :id="'dataBlockTitleEdit-'+item.id"
                   data-model="item.text"
                   data-condition="item.editable_text"
                   x-init="sticControls.editableText($el);"
@@ -76,14 +62,14 @@
               <template x-if="item.module">
                 <h5
                   class="text-muted"
-                  x-text="utils.getModuleInformation(item.module).text + ' (' + item.name + ')'"
+                  x-text="utils.getModuleInformation(item.module).text + ' (' + item.id + ')'"
                 ></h5>
               </template>
             </div>
 
             <div class="card-text">
               <!-- Fields Definition -->
-              <div :id="'dataBlockFields'+item.name">
+              <div :id="'dataBlockFields'+item.id">
                 [Los campos del Bloque de datos]
                 <!-- Fields Details -->
                 <div x-data="{ showDataFieldsTable: false}">
@@ -97,7 +83,7 @@
                   <div class="card p-2 overflow-auto" x-show="showDataFieldsTable">
                     <div
                       class="mt-3"
-                      :id="'dataFieldsTable'+item.name"
+                      :id="'dataFieldsTable'+item.id"
                       :data-objects="'item.fields'"
                       x-init="sticControls.elemTableObjects($el);"
                     ></div>
@@ -105,14 +91,22 @@
                 </div>
                 <div x-effect="item.checkDataBlock()"></div>
               </div>
+              <!-- Duplicate Definition -->
               <template x-if="item.module">
-                <!-- Duplicate Definition -->
-                <div :id="'dataBlockDuplicates'+item.name">
+                <div :id="'dataBlockDuplicates'+item.id">
                   <div class="row">
                     <!-- Action -->
+                    <!-- <stic-field-select
+                      class="col-3"
+                      x-model="item.duplicate_detection.on_duplicate"
+                      label="LBL_ONDUPLICATE_ACTION"
+                      map="utils.getList('stic_advanced_web_forms_datablocks_duplicate_action_list', false)"
+                      map-text="text"
+                      map-value="id"
+                    ></stic-field-select> -->
                     <div
                       class="col-3"
-                      :id="'duplicateAction'+item.name"
+                      :id="'duplicateAction'+item.id"
                       :data-model="'item.duplicate_detection.on_duplicate'"
                       data-label="LBL_ONDUPLICATE_ACTION"
                       :data-map="utils.getList('stic_advanced_web_forms_datablocks_duplicate_action_list', true)"
@@ -121,7 +115,7 @@
                     <!-- Fields -->
                     <div
                       class="col-9"
-                      :id="'duplicateFields'+item.name"
+                      :id="'duplicateFields'+item.id"
                       :data-model="'item.duplicate_detection.fields'"
                       data-label="LBL_DUPLICATE_FIELDS"
                       :data-mapOld="`item.fields`"
@@ -135,23 +129,76 @@
                   </div>
                 </div>
               </template>
+              <!-- Relationship Definition -->
+              <template x-if="item.module">
+                <div :id="'dataBlockRels'+item.id">
+                  [Las relaciones del Bloque de datos]
+                  <!-- Relationship Details -->
+                  <div
+                    class="border-bottom ps-3 pt-3 mb-2 bg-light"
+                    x-data="{creatingRelDataBlock:false, newDataBlock:{module:'', text:''}}"
+                  >
+                    <div class="row">
+                      <button
+                        type="button"
+                        class="btn w-auto"
+                        x-show="!creatingRelDataBlock"
+                        @click="creatingRelDataBlock=true;"
+                      >
+                        [Añadir Relación con otro Bloque de Datos]
+                      </button>
+                      <h4 x-show="creatingRelDataBlock">[Añadir Relación con otro Bloque de Datos]</h4>
+                    </div>
+                    <div class="row align-items-end" x-show="creatingRelDataBlock">
+                      <!-- Relationship -->
+                      <div
+                        class="col-3"
+                        :id="'dataBlockRels'+item.id+'New_SelRel'"
+                        data-model="newDataBlock.module"
+                        data-label="LBL_RELATIONSHIP"
+                        :data-map="`formConfig.getAvailableRelationships('${item.id}')`"
+                        data-map-property="textExtended"
+                        data-map-value="relationship"
+                        x-init="sticControls.fieldSelect($el)"
+                      ></div>
+                      <stic-field-text
+                        class="col-3"
+                        x-model="newDataBlock.text"
+                        label="LBL_DATABLOCK"
+                        x-effect="newDataBlock.text=formConfig.suggestDataBlockName(newDataBlock.module)"
+                      ></stic-field-text>
+                      <button
+                        type="button"
+                        class="btn w-32px mb-1px"
+                        @click="formConfig.addDataBlockModule(newDataBlock.module, true, newDataBlock.text); creatingRelDataBlock = false;"
+                      >
+                        <span class="suitepicon suitepicon-action-confirm"></span>
+                      </button>
+                      <button type="button" class="btn w-32px mb-1px" @click="creatingRelDataBlock = false;">
+                        <span class="suitepicon suitepicon-action-clear"></span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </template>
 
               <!-- Accordion Headers -->
               <template x-if="item.module">
                 <div
-                  :id="'dataDef_'+item.name"
+                  :id="'dataDef_'+item.id"
                   :data-sections="JSON.stringify([
-                                    {headerText:`utils.translate('LBL_FIELDS') + ' ('+item.fields.length+')'`, selected:true, contentId:'dataBlockFields'+item.name},
-                                    {headerText:`utils.translate('LBL_DUPLICATE_CHECK') + ' ('+item.duplicate_detection.fields.length+' - '+item.duplicate_detection.on_duplicate+')'`, selected:false, contentId:'dataBlockDuplicates'+item.name}
+                                    {headerText:`utils.translate('LBL_FIELDS') + ' ('+item.fields.length+')'`, selected:true, contentId:'dataBlockFields'+item.id},
+                                    {headerText:`utils.translate('LBL_DUPLICATE_CHECK') + ' ('+item.duplicate_detection.fields.length+' - '+item.duplicate_detection.on_duplicate+')'`, selected:false, contentId:'dataBlockDuplicates'+item.id},
+                                    {headerText:`utils.translate('LBL_RELATIONSHIPS')`, selected:false, contentId:'dataBlockRels'+item.id},
                                   ]);"
                   x-init="sticControls.accordion($el)"
                 ></div>
               </template>
               <template x-if="!item.module">
                 <div
-                  :id="'dataDef_'+item.name"
+                  :id="'dataDef_'+item.id"
                   :data-sections="JSON.stringify([
-                                    {headerText:`utils.translate('LBL_FIELDS') + ' (' + item.fields.length +')'`, selected:true, contentId:'dataBlockFields'+item.name},
+                                    {headerText:`utils.translate('LBL_FIELDS') + ' (' + item.fields.length +')'`, selected:true, contentId:'dataBlockFields'+item.id},
                                   ]);"
                   x-init="sticControls.accordion($el)"
                 ></div>
@@ -160,48 +207,35 @@
           </div>
         </div>
       </template>
-
-      <!-- Details Data [DEBUG] -->
-      <div x-data="{ showDetails: false}">
+    </div>
+  </div>
+  <!-- Details Data [DEBUG] -->
+  <div x-data="{ showDetails: false}">
+    <div
+      class="text-muted form-check form-switch mb-3 mt-5"
+      id="showDetailsDataToggleSwitch"
+      data-model="showDetails"
+      data-label-text="[Mostrar Detalles]"
+      x-init="sticControls.fieldCheckbox($el);"
+    ></div>
+    <div class="card p-2" x-show="showDetails">
+      <!-- Data Blocks -->
+      <div id="detailsDataBlocks">
         <div
-          class="text-muted form-check form-switch mb-3 mt-5"
-          id="showDetailsDataToggleSwitch"
-          data-model="showDetails"
-          data-label-text="[Mostrar Detalles]"
-          x-init="sticControls.fieldCheckbox($el);"
+          class="mt-3"
+          id="dataBlocksTable"
+          data-objects="formConfig.data_blocks"
+          x-init="sticControls.elemTableObjects($el);"
         ></div>
-        <div class="card p-2" x-show="showDetails">
-          <!-- Data Blocks -->
-          <div id="detailsDataBlocks">
-            <div
-              class="mt-3"
-              id="dataBlocksTable"
-              data-objects="formConfig.data_blocks"
-              x-init="sticControls.elemTableObjects($el);"
-            ></div>
-          </div>
-
-          <!-- Selected Node -->
-          <div id="detailsSelectedNode">
-            <div
-              class="mt-3"
-              id="selectedNodeTable"
-              data-model="step2.treeSelectedData"
-              x-init="sticControls.elemTableObject($el);"
-            ></div>
-          </div>
-
-          <!-- Tab Headers -->
-          <div
-            id="details"
-            :data-sections="JSON.stringify([
-                          {headerText:`'[Nodo seleccionado]'`, selected:true, contentId:'detailsSelectedNode'},
-                          {headerText:`'[Bloques de datos]'`, selected:false, contentId:'detailsDataBlocks'},
-                        ]);"
-            x-init="sticControls.tabs($el)"
-          ></div>
-        </div>
       </div>
+      <!-- Tab Headers -->
+      <div
+        id="details"
+        :data-sections="JSON.stringify([
+                              {headerText:`'[Bloques de datos]'`, selected:true, contentId:'detailsDataBlocks'},
+                            ]);"
+        x-init="sticControls.tabs($el)"
+      ></div>
     </div>
   </div>
 </main>
